[package]
name = "_04_ecosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
anyhow = "1.0.95"
axum = { version = "0.7.9", features = ["http2", "query", "tracing"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version =  "0.4.39", features = ["serde"] }
derive_builder = "0.20.2"
derive_more = "0.99.17"
strum = { version = "0.26.2", features = ["derive"] }
